<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="edu.calpoly.aagrover.goal.StartNewGoalActivity"
    android:background="@drawable/tree_boat">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/startGoalInstr"
        android:id="@+id/guideStart"
        android:typeface="monospace"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/colorCharcoal"
        android:layout_marginBottom="6dp"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/etTypeGoal"
        android:hint="@string/hintTypeGoal"
        android:textColorHint="@color/colorCharcoal"
        android:typeface="monospace"
        android:textStyle="italic"
        android:textSize="12sp"
        android:background="@drawable/get_goal"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/guideStart"
        android:layout_alignLeft="@+id/etTypeDate"
        android:layout_alignStart="@+id/etTypeDate"
        android:singleLine="true"
        android:imeOptions="actionNext" />

    <EditText
        android:id="@+id/etTypeDate"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:hint="@string/hintTypeDate"
        android:textColorHint="@color/colorCharcoal"
        android:typeface="monospace"
        android:textStyle="italic"
        android:textSize="12sp"
        android:background="@drawable/get_goal"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/etTypeGoal"
        android:layout_centerHorizontal="true"
        android:inputType="date"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setGoal"
        android:id="@+id/bSetGoal"
        android:background="@color/colorCharcoal"
        android:typeface="monospace"
        android:textColor="@color/colorWhiteish"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
