<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/colorCharcoal" >

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/tvGoal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="20sp"
        android:typeface="monospace"
        android:background="@drawable/the_waves"
        android:textColor="@color/colorCharcoal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="New Text"
        android:id="@+id/tvDate"
        android:gravity="center"
        android:textSize="15sp"
        android:typeface="monospace"
        android:background="#81C784"
        android:textColor="@color/colorCharcoal"
        android:layout_below="@+id/tvGoal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"/>

    <edu.calpoly.aagrover.goal.ProgressWheel
        android:id="@+id/progressBarTwo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        ProgressWheel:textColor="#81C784"
        ProgressWheel:textSize="18sp"
        ProgressWheel:rimColor="#44000000"
        ProgressWheel:pwBarLength="60dp"
        ProgressWheel:barColor="#81C784"
        ProgressWheel:barWidth="10dp"
        ProgressWheel:rimWidth="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:text="New Text"
        android:id="@+id/tvDays"
        android:background="@color/colorLightBlue"
        android:textColor="@color/colorCharcoal"
        android:textSize="25sp"
        android:gravity="center"
        android:typeface="monospace"
        android:layout_below="@+id/tvDate"
        android:layout_toLeftOf="@+id/tvHours"
        android:layout_toStartOf="@+id/tvHours"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:text="New Text"
        android:id="@+id/tvHours"
        android:background="@color/colorLightBlue"
        android:textColor="@color/colorCharcoal"
        android:textSize="25sp"
        android:gravity="center"
        android:typeface="monospace"
        android:layout_alignTop="@+id/tvDays"
        android:layout_toLeftOf="@+id/linearLayout"
        android:layout_toStartOf="@+id/linearLayout"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:text="New Text"
        android:id="@+id/tvMin"
        android:background="@color/colorLightBlue"
        android:textColor="@color/colorCharcoal"
        android:textSize="25sp"
        android:gravity="center"
        android:typeface="monospace"
        android:layout_below="@+id/tvDate"
        android:layout_toRightOf="@+id/tvHours"
        android:layout_toEndOf="@+id/tvHours"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:text="New Text"
        android:id="@+id/tvSec"
        android:background="@color/colorLightBlue"
        android:textColor="@color/colorCharcoal"
        android:textSize="25sp"
        android:gravity="center"
        android:typeface="monospace"
        android:layout_alignTop="@+id/tvMin"
        android:layout_toRightOf="@+id/tvMin"
        android:layout_toEndOf="@+id/tvMin" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/days"
        android:id="@+id/textView5"
        android:layout_below="@+id/tvDays"
        android:layout_alignLeft="@+id/tvDays"
        android:layout_alignStart="@+id/tvDays"
        android:gravity="center"
        android:background="@color/colorLightBlue"
        android:textColor="@color/colorCharcoal"
        android:textSize="15sp"
        android:typeface="monospace"/>

    <TextView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        android:id="@+id/textView6"
        android:gravity="center"
        android:background="@color/colorLightBlue"
        android:textColor="@color/colorCharcoal"
        android:textSize="15sp"
        android:typeface="monospace"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignLeft="@+id/tvHours"
        android:layout_alignStart="@+id/tvHours" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/mins"
        android:id="@+id/textView7"
        android:layout_below="@+id/tvMin"
        android:layout_alignLeft="@+id/tvMin"
        android:layout_alignStart="@+id/tvMin"
        android:gravity="center"
        android:background="@color/colorLightBlue"
        android:textColor="@color/colorCharcoal"
        android:textSize="15sp"
        android:typeface="monospace"/>

    <TextView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/sec"
        android:id="@+id/textView8"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignLeft="@+id/tvSec"
        android:layout_alignStart="@+id/tvSec"
        android:gravity="center"
        android:background="@color/colorLightBlue"
        android:textColor="@color/colorCharcoal"
        android:textSize="15sp"
        android:typeface="monospace"
        android:layout_marginBottom="7dp"/>

    <TextView
        android:id="@+id/tvProgress"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:gravity="center"
        android:typeface="monospace"
        android:textSize="13sp"
        android:background="@drawable/motivation"
        android:layout_above="@+id/checkUserProgress"
        android:layout_alignLeft="@+id/addedForBalance"
        android:layout_alignStart="@+id/addedForBalance"
        android:layout_alignRight="@+id/addedForBalance"
        android:layout_alignEnd="@+id/addedForBalance" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addedForBalance"
        android:text="Goal: [n] a dream with a deadline."
        android:typeface="monospace"
        android:gravity="center"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignRight="@+id/textView8"
        android:layout_alignEnd="@+id/textView8"
        android:layout_above="@id/tvProgress"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:id="@+id/checkUserProgress"
        android:background="@drawable/my_stats"
        android:gravity="center"
        android:layout_alignRight="@+id/tvProgress"
        android:layout_alignEnd="@+id/tvProgress"
        android:layout_alignLeft="@+id/tvProgress"
        android:layout_alignStart="@+id/tvProgress"
        android:layout_above="@+id/briberyText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:id="@+id/briberyText"
        android:typeface="monospace"
        android:gravity="center"
        android:background="@drawable/bribe"
        android:layout_alignLeft="@+id/checkUserProgress"
        android:layout_alignStart="@+id/checkUserProgress"
        android:layout_above="@+id/progressBarTwo"
        android:layout_alignRight="@+id/checkUserProgress"
        android:layout_alignEnd="@+id/checkUserProgress"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>